# msense-firmware

./: .gitignore  Cargo.toml  build.rs  build_and_release.ps1  build_and_release.sh  memory.x  readme.md
src/: board_rev_1_3_2.rs  board_rev_2_0.rs  board_rev_devboard.rs  board_types.rs  main.rs
src/modules/: bus.rs  config.rs  devboard_channels.rs  error_log.rs  mod.rs  modem.rs  network.rs  util.rs  watchdog.rs
src/modules/sensors/: battery.rs  gas.rs  mod.rs  types.rs
src/modules/tasks/: mod.rs  system.rs
