[package]
name = "msense-firmware"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-nrf = { version = "0.3.1", features = [
  "defmt",
  "nrf9160-s",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }

embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }

embassy-net-nrf91 = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = ["defmt", "udp","tcp","dns", "proto-ipv4", "medium-ip"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.10"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.8"
tinyrlibc = "0.4.0"
nrf-modem = { version = "0.6.1", features = ["nrf9160"] }


[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net-nrf91 = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git"  }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }

[profile.release]
debug = 2
