[package]
name = "msense-firmware"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
# ────────── building-block features ──────────
watchdog = []               
sensors = []
npm1300 = []
i2c = []
# ────────── board “meta-features” ────────────
rev_1_3_2 = ["watchdog","sensors","npm1300","i2c"]# default board
rev_2_0    = ["watchdog","sensors","npm1300","i2c"] # devboard
devboard   = ["watchdog"]

#default = ["rev_1_3_2"]

[dependencies]
embassy-nrf = { version = "0.3.1", features = [
  "defmt",
  "nrf9160-s",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }

embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }

embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }

embassy-embedded-hal = "0.3.0"

embassy-net-nrf91 = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = ["defmt", "udp","tcp","dns", "proto-ipv4", "medium-ip"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.10"
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-sync = "0.6.2"
minicbor = { version = "0.26.1", default-features = false}
static_cell = "2.1.0"
embedded-ads111x =  {version = "0.1.2", features = ["async"] }
bosch-bme680 = { version = "1.0.3", features = ["embedded-hal-async"] }
npm1300-rs = { path = "../npm1300-rs", features = ["defmt-03"] }

#NRFMODEM
tinyrlibc = "0.4.0"
nrf-modem = { version = "0.7.2", features = ["nrf9160"] }

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net-nrf91 = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git"  }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }

[profile.release]
debug = 2

[package.metadata.cargo-machete]
ignored = ["cortex-m-rt","embassy-net", "embassy-net-nrf91"]